Add authorized message reads
